[package]
name = "cp_r"
version = "0.4.0-pre"
edition = "2018"
authors = ["Martin Pool"]
description = "Copy files and directories recursively, preserving mtime and permissions"
license = "MIT"
repository = "https://github.com/sourcefrog/cp_r"
categories = ["filesystem"]

[dependencies]
filetime = "0.2"

[dev-dependencies]
anyhow = "1.0"  # to test attaching context
tempfile = "3.2"
