[package]
name = "cp_r"
version = "0.6.0-pre"
edition = "2018"
authors = ["Martin Pool"]
description = "Copy files and directories recursively, preserving mtime and permissions"
license = "MIT"
repository = "https://github.com/sourcefrog/cp_r"
categories = ["filesystem"]
keywords = ["copy", "directory", "filesystem", "permissions", "recursive"]

[dependencies]
filetime = "0.2"
fs_at = { version = "0.0.1-alpha1", git = "https://github.com/rbtcollins/fs_at" }

[dev-dependencies]
anyhow = "1.0"   # to test attaching context
tempfile = "3.2"
