[package]
name = "cp_r"
version = "0.5.1"
edition = "2018"
authors = ["Martin Pool"]
description = "Copy files and directories recursively, preserving mtime and permissions"
license = "MIT"
repository = "https://github.com/sourcefrog/cp_r"
categories = ["filesystem"]
keywords = ["copy", "directory", "filesystem", "permissions", "recursive"]
# rust-version = "1.63"

[dependencies]
filetime = "0.2.6"

[dev-dependencies]
anyhow = "1.0.60" # to test attaching context
tempfile = "3.8"
